comment out OU and spider monkey sections

--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -459,51 +459,50 @@ Ensembl v.80 gene trees via
 Biomart\cite{Kasprzyk2011:BioMartdrivingparadigmchange} using the
 biomaRt R package \DLA{Cite the biomaRt package}. A total of
 \Sexpr{combined.fpkm[species!="homo sapiens" & mean_fpkm >=
-  1,length(unique(human_name))]} 1:1 orthologous genes were
-expressed in at least one species. Of these,
-\Sexpr{combined.fpkm[species!="homo sapiens" & mean_fpkm >=
-  10,length(unique(human_name))]} 1:1 orthologous genes with
-\ac{FPKM} $\ge 10$ were retained for future analyses of gene
-expression evolution described below.
+  1,length(unique(human_name))]} 1:1 orthologous genes were expressed
+in at least one species. Of these, \Sexpr{combined.fpkm[species!="homo
+  sapiens" & mean_fpkm >= 10,length(unique(human_name))]} 1:1
+orthologous genes with \ac{FPKM} $\ge 10$ were retained for future
+analyses of gene expression evolution described below.
 
-We used the software \ac{OUCH} in the R statistical environment to
-investigate significant shifts in gene expression levels over
-time\cite{Butler.2004:phlogeneticcomparativeanalysis}. \ac{OUCH}
-institutes an \ac{OU} model of evolution, which allows for different
-optima for quantitative trait values along user-specified branches of
-a phylogenetic tree. The \ac{OU} model explicitly accounts for change
-in quantitative trait values by introducing two parameters into the
-model of stochastic Brownian motion of change in trait value along a
-phylogenetic tree through time. These parameters are $\theta$, an
-optimum trait value, and $\alpha$, the strength of selection
-(interpreted as “pull” toward the optimum). In addition, the \ac{OU}
-model can also integrate evolutionary change by assuming that each
-user-specified set of braches has its own separate \ac{OU} parameters
-\cite{Butler.2004:phlogeneticcomparativeanalysis}.
-
-\DLA{The description of the OU process is terrible; it needs to be
-  completely redone}
-
-Various \ac{OU} branch models were tested against a model in which no
-variation in optima ($\theta$) among branches was allowed. The
-following branches were specified in separate models to have a
-different optimum than all other branches: human, bonobo, mouse, dog,
-cow, elephant, opossum, human+bonobo, Euarchontoglires, and
-Boreoeutheria. Likelihood values were computed for each branch model
-and compared to an \ac{OU} model with one optimum using likelihood
-ratio tests with df=1. We filtered out genes with universally low
-expression levels, and included only genes in which expression in at
-least one species had an $\mathrm{FPKM}\ge10$ as described above. We
-corrected for multiple testing using the \ac{FDR} and using the
-Benjamini-Hochberg correction\cite{Benjamini1995:bh_procedure}. We
-used the time-calibrated phylogenetic tree of
-\cite{Meredith.ea2011:ImpactsofCretaceousTerrestrial} with all species
-not used in this analyses pruned.
-
-We also calculated the enrichment of functional categories in the
-lists of genes which displayed a significant shift in expression on
-each branch using the same methodology as in the per-species gene
-lists \DLA{reference the tables once this analysis is complete}.
+% We used the software \ac{OUCH} in the R statistical environment to
+% investigate significant shifts in gene expression levels over
+% time\cite{Butler.2004:phlogeneticcomparativeanalysis}. \ac{OUCH}
+% institutes an \ac{OU} model of evolution, which allows for different
+% optima for quantitative trait values along user-specified branches of
+% a phylogenetic tree. The \ac{OU} model explicitly accounts for change
+% in quantitative trait values by introducing two parameters into the
+% model of stochastic Brownian motion of change in trait value along a
+% phylogenetic tree through time. These parameters are $\theta$, an
+% optimum trait value, and $\alpha$, the strength of selection
+% (interpreted as “pull” toward the optimum). In addition, the \ac{OU}
+% model can also integrate evolutionary change by assuming that each
+% user-specified set of braches has its own separate \ac{OU} parameters
+% \cite{Butler.2004:phlogeneticcomparativeanalysis}.
+% 
+% \DLA{The description of the OU process is terrible; it needs to be
+%   completely redone}
+% 
+% Various \ac{OU} branch models were tested against a model in which no
+% variation in optima ($\theta$) among branches was allowed. The
+% following branches were specified in separate models to have a
+% different optimum than all other branches: human, bonobo, mouse, dog,
+% cow, elephant, opossum, human+bonobo, Euarchontoglires, and
+% Boreoeutheria. Likelihood values were computed for each branch model
+% and compared to an \ac{OU} model with one optimum using likelihood
+% ratio tests with df=1. We filtered out genes with universally low
+% expression levels, and included only genes in which expression in at
+% least one species had an $\mathrm{FPKM}\ge10$ as described above. We
+% corrected for multiple testing using the \ac{FDR} and using the
+% Benjamini-Hochberg correction\cite{Benjamini1995:bh_procedure}. We
+% used the time-calibrated phylogenetic tree of
+% \cite{Meredith.ea2011:ImpactsofCretaceousTerrestrial} with all species
+% not used in this analyses pruned.
+% 
+% We also calculated the enrichment of functional categories in the
+% lists of genes which displayed a significant shift in expression on
+% each branch using the same methodology as in the per-species gene
+% lists \DLA{reference the tables once this analysis is complete}.
 
 \subsection{Correlation of Tissue Specific Index with Lineage Specific Genes}
 
@@ -521,20 +520,20 @@ predominant expression in only one tissue
 expressed in only one tissue would have a \ac{TSI} of 1, whereas a
 gene expressed in all tissues would have a \ac{TSI} of 0.
 
-\subsection{Validation of Primate Expression using Spider Monkey Placenta Transcriptome}
-
-To verify expression levels in human and bonobo, we also generated
-RNA-Seq data for the placenta transcriptome of the black-headed spider
-monkey (\textit{Ateles fusciceps}) using similar protocols discussed above.
-Ateles is outside the clade, which includes hominids and can be used
-to polarize expression values of highly expressed genes in Homo and
-Pan. We sampled placental tissue from an Ateles placenta expelled from
-the mother shortly after birth (see Supplemental Table X). We used
-similar procedures discussed above to extract and sequence this
-sample. [DEREK—I’m unsure how to proceed on describing this so as to
-not step on Natalie’s toes]
-
-\DLA{Complete discussion of the ateles placenta}
+% \subsection{Validation of Primate Expression using Spider Monkey Placenta Transcriptome}
+% 
+% To verify expression levels in human and bonobo, we also generated
+% RNA-Seq data for the placenta transcriptome of the black-headed spider
+% monkey (\textit{Ateles fusciceps}) using similar protocols discussed above.
+% Ateles is outside the clade, which includes hominids and can be used
+% to polarize expression values of highly expressed genes in Homo and
+% Pan. We sampled placental tissue from an Ateles placenta expelled from
+% the mother shortly after birth (see Supplemental Table X). We used
+% similar procedures discussed above to extract and sequence this
+% sample. [DEREK—I’m unsure how to proceed on describing this so as to
+% not step on Natalie’s toes]
+% 
+% \DLA{Complete discussion of the ateles placenta}
 
 \subsection{Sequence Deposition and Code}
 
